--- a/react-development-starter-guide-tutorial/package.json
+++ b/react-development-starter-guide-tutorial/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "browserify": "^14.5.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17"
