--- a/react-development-starter-guide-tutorial/package.json
+++ b/react-development-starter-guide-tutorial/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "browserify": "^14.5.0",
+    "jquery": "^3.2.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17"
